Fixes back button on mobile

--- a/_sass/gallery/buttons.scss
+++ b/_sass/gallery/buttons.scss
@@ -33,6 +33,7 @@
 }
 
 .arrow-back {
+	margin: 0.5em;
 	z-index: 1;
 	bottom: auto;
 	will-change: transform;
